# ChangeLog for dev-python/python-keystoneclient
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-keystoneclient/ChangeLog,v 1.2 2013/01/01 09:01:23 prometheanfire Exp $

*python-keystoneclient-0.2.1 (01 Jan 2013)

  01 Jan 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-keystoneclient-0.2.1.ebuild, -python-keystoneclient-2012.2.ebuild:
  added python-keystoneclient-0.2.1 (from pypi) and removed
  python-keystoneclient-2012.2 (from launchpad)

*python-keystoneclient-9999 (01 Jan 2013)
*python-keystoneclient-2012.2 (01 Jan 2013)

  01 Jan 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-keystoneclient-2012.2.ebuild, +python-keystoneclient-9999.ebuild,
  +metadata.xml:
  initial add of python-keystoneclient
