@@ -2,24 +2,24 @@
 Hash: SHA256
 
 DIST python-keystoneclient-0.2.1.tar.gz 131997 SHA256 ab0bad758450cb50a91eca71cf738b88f4443a7f9aef317ad50447c3caeba692 SHA512 207ac0531d04f5bfd3a0d3e385dff94778c20300c264961fb78fd0f391074892267a844f2a05b48e4a55b58c1748a332231550c876417d133451160b8690c467 WHIRLPOOL 698dc7cbe88cc5208b331282f22695c27925c91921581735a024c729a6232799a2481acc2bae624810f468ec885c5833e604935966c3453ab981472a2f4b4b46
-EBUILD python-keystoneclient-0.2.1.ebuild 1269 SHA256 e5fcac6dd1f6b223d494f6c666e2ec3e6e8e311e1fae680b10c6c6229fdd84e4 SHA512 bc29fdbb2fc20a8a6f1696e45b03a80dfab6b8b27f8860c3ae438d1953377cf9ea8167c102c2964dab716cef85bdc704b8ac4596ddbdf9941f7545cb2f1f9b42 WHIRLPOOL b94f3947aafd33327ca4e9782a3cb6c6a8739c2e7ba1d3cf96b8ad740be79cd3eb55a2d5f541216139bcabb9e4473a9992fcb05ec4384d4cfc65c7af48ebc52e
-EBUILD python-keystoneclient-9999.ebuild 1282 SHA256 ff2023586f3240d8390428f47fb2c97cf0dedd11498a316e37e6d00627a9cb49 SHA512 6dfb2b7c07c95689fcb5e0d59fa989049ac025f447a094b931033bf7a3bc8d9184f676fe03fb74a02529b1b104c4c45c968b514e55379e85152d12cedd98f401 WHIRLPOOL 619034f450d4c5e43350b017518814a201188f56e7f8aa235c88023b51cbd2d277f24094943292f75c018b4f410dc894049c342575d312f8447d86fec94d1495
-MISC ChangeLog 809 SHA256 7e577afc1cebe701949ade48482585a85bb724bdb096ff05d5a69181454d4368 SHA512 ee5fdd667919b4a1680498595f0ca6c5e287eac8369949890968932879485546f55489f645b5a773c2b7bce085fa78cf8dded84040b1cb9655e913827f46c325 WHIRLPOOL 56866f1b11df3e0aa8b521a49123c7a2a67f8cb2c1840aa88bae1ae9d9ae21e14caf6d6cf09f47964accc916fa287b8b32c7c22ccce0698763f6d61476b57184
+EBUILD python-keystoneclient-0.2.1-r1.ebuild 1307 SHA256 a6b825aae22750a4aca95ea49cb125d63a62a76f185e17905f1c79394364c458 SHA512 5e431f05bd2e1d27805b48361cf4e1cdaf4ffd87b45e620cdf329a665ed8b265151389ba40855c03b5dbedb80b5a779ead24c9c18c3d747d0a456bc385dda108 WHIRLPOOL c5af2e4461693695ae373cb13931658e4ffe24dd7e5a2065ec22a43e3e17f85a99df6b8296f781a6b910fe81e77677486f397d498c25b8fe6eb07b4bb8e9f269
+EBUILD python-keystoneclient-9999.ebuild 1317 SHA256 f7d7e2c0a8381f9b7e910b3bdf50222f70e739f5e612b46aa3ce5a8a3b0fe8c8 SHA512 634ef95a20065cc4840cdd6d5754793a7f8150b27880d5510f668cd6056d38d4e47db91b471ac487beedc6522c7b412f6543aabc45766003bca5f47e585ee037 WHIRLPOOL f3ca7f6db8788663a64504afae9f18bd4b38a5a201c7900ee465419d581a511d289ca23945f7da88f91789ccda47b97764f298b47098d01349d4cd42139592e0
+MISC ChangeLog 1068 SHA256 99f92cd22dd554333a41b446ca8f8b610200800307094670b538a00b47ac8b37 SHA512 40cafb6bae210952ece893006d90613d8ccc4379b2152332551f3dc26ad3d4a883254e6afa2f956676638ed6d20e9035464bd41414af106eb815b3e56b67e688 WHIRLPOOL 5452e2ac14fb8900fe7531dfc61d1339c2b08a47de4acb2b7e0eaed0d7c0b8fdeff8d140b60db4bd10b6bd1c8c756c3612574b25c38d1f93285fd3690d153c6f
 MISC metadata.xml 343 SHA256 716e96a66916d216f80e7ce0283db63bd6d18a95e2365d9d1a35964b2ef461f9 SHA512 fd28e5434f725af6a835205ae8cfae1354983f8e68f6c25f9a4f56ec17041ac9bb1a460ff8e82d0e165ab19c5b0f26e0f0c8c5124dfcc37723c786e12cd4d3bf WHIRLPOOL b486328b67aa7f6e4b68adc757bf5d3983077a894d7ded68be7723fe5655805324a73e5914fda0f81ae334e75db9557e2675a43e9437df633311590758466c5c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQ4qXqAAoJECRx6z5ArFrD1x0P/0yCchiTIwGqbvLsvArUdbV3
-srqVSfdAo7th7x9G9R2rRgwa3FokwJGFA5NZcmiihioGu+YIPJ5v8lv/cdIhQkEj
-niPv7s/0t4zfuqlXQ1qSqP5AdirbfSWy1hj/7MtDAYwdCptqxlWTDdV2WOBBYCUZ
-hJHMQ1y4rZccdKdnrQesMMaKPAvLUC3pLM3vXufKFBhk9DfE5a3aDg/j+N05uwOj
-j1h8jzvXw0Fl1hCmT8+mkjI0m9bHyPJQSmJeyHu1fXPnDtmNe24qzq3LJDNIghJH
-EAeKfPTzF1OZ9kDFfULcAQo5Z5CoytLOGGo+eqdRMv1+QwER2siobErfbwCMLaeH
-CxOfbHmIXo4pUEz9Mtzl8HVefyXVEch4ZNdAJGwogyRbGkv9QSTL4rH9KEpgMooP
-h42oCEqDNqLh64R9ggUZPsm9z2nNamTjZ1D7S2gTm7jV1fLlXcsVyxLFo7xZABY0
-UXrRmAahnA0oYiE5AH0XsEnIs4KuPO/bIWzD0i0k809HAe76YFmi/Lq5QA8YhHHz
-/mjzaVjOnYm1uu8Q2/1GqocjZ6G9JpSr9bMdCbIAgsBp68CurnCEFDCm862D5C2X
-gRe8O8aY7wMyLWBbDTYBTPT6kOgFoz3RWNuEJds2cvw6eSKtlfW8HVrUmzlCmYIY
-oZSYao/41FGJFjru50Mu
-=2ZG1
+iQIcBAEBCAAGBQJQ8JADAAoJECRx6z5ArFrD72IQALZoz25q3TsURrpEfPVIUoEy
+C9VCD2rFbLR56Tdf5ZnJ8kxeHPq8LUaZkYnU5AgcJg+kriXJSdHseWyIW71vvVCK
+qd143HKk4OQug3RvSM10XeTpPcmrArxps1lZbBOWS/upILqIzU9fb39xL3JKZozi
+G5RukUYeFNwWk/5c9n3lTFngzCO5oBbzFFgcs7zupZVaw42CM/khztFUOYtfjNpZ
+yOmA2PmIn96DCRUuxr4077y7wMdcAXtnbDgt2/Z2a2v3gOdaGGYMLC6rDv+Y2TqO
+Dwe0EGHEdhuFbUGsKcZZF3fJ4pNZ1/gw7mpz61I/RzO0KzTxBNsvdD8Lk7tLAKEH
+uXFs3VUI1xJNApaIaYaQ4XYTHsSmZzYWDI35noCNFYnT0g1OHaxEZ17YVSYLjOAn
+w3J8C4Ju9qfRHb0pCFUHUKOEDhDJeXfDtNOM+IHVYsx/saI67JITNrzLUp/HYMBv
+ie85U9fO7JkIu7cOe4jOKkljP7QzyW/VroeZkaJuIT0kijP50YZ19/kbMbi1Bot0
+81asQF3UNlNzX76CdHYcoIbu9qIcAlljZdI7EwNeHpcf/ScfIif44ZI+r6fywdOQ
+cFwJlw5JLDIlC+OZzxmjde6nl5GuyRx4Ya5/7/twnVThaBXHax8GSaOZ1AHxXhg7
+DteQnolmC1vYh3uXC3Ak
+=x/A0
 -----END PGP SIGNATURE-----
