@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-keystoneclient/python-keystoneclient-0.2.1.ebuild,v 1.1 2013/01/01 09:01:23 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-keystoneclient/python-keystoneclient-0.2.1-r1.ebuild,v 1.1 2013/01/11 22:19:40 prometheanfire Exp $
 
 EAPI=5
 #restricted due to packages missing and bad depends in the test ==webob-1.0.8
@@ -9,7 +9,7 @@ PYTHON_COMPAT=( python2_5 python2_6 python2_7 )
 
 inherit distutils-r1
 
-DESCRIPTION="A client for the OpenStack Keystone API."
+DESCRIPTION="A client for the OpenStack Keystone API"
 HOMEPAGE="https://github.com/openstack/python-keystoneclient"
 SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
@@ -23,8 +23,8 @@ DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
 RDEPEND="dev-python/httplib2
 		dev-python/prettytable
 		dev-python/requests
-		dev-python/simplejson
-		virtual/python-argparse"
+		dev-python/simplejson[${PYTHON_USEDEP}]
+		virtual/python-argparse[${PYTHON_USEDEP}]"
 #		test? ( dev-python/Babel
 #			dev-python/coverage
 #			dev-python/iso8601
