@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/python-keystoneclient
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-keystoneclient/ChangeLog,v 1.2 2013/01/01 09:01:23 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-keystoneclient/ChangeLog,v 1.3 2013/01/11 22:19:40 prometheanfire Exp $
+
+*python-keystoneclient-0.2.1-r1 (11 Jan 2013)
+
+  11 Jan 2013; Matthew Thode <prometheanfire@gentoo.org>
+  -python-keystoneclient-0.2.1.ebuild, +python-keystoneclient-0.2.1-r1.ebuild,
+  python-keystoneclient-9999.ebuild:
+  updating ebuilds to support more []
 
 *python-keystoneclient-0.2.1 (01 Jan 2013)
 
